# GeneEval

./: .coveragerc  .gitignore  README.md  embedding_test.tsv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
geneeval/: __init__.py  data.py  dataset_reader.py  engine.py  main.py
geneeval/classifiers/: __init__.py  auto_classifier.py  supervised_classifiers.py
geneeval/common/: data_utils.py  utils.py
geneeval/fetcher/: auto_fetcher.py  fetchers.py  uniprot_test.txt
geneeval/metrics/: __init__.py  auto_metric.py
scripts/: get_protein_ids.py
tests/: conftest.py  test_data.py  test_dataset_reader.py  test_engine.py  test_main.py
tests/classifiers/: test_auto_classifier.py  test_supervised_classifiers.py
tests/common/: test_data_utils.py  test_utils.py
tests/data/: benchmark.json  embeddings.csv  embeddings.json  embeddings.tsv  embeddings.txt  features.csv  features.json  features.tsv  features.txt  predictions.json
tests/metrics/: test_auto_metric.py
