[tool.poetry]
name = "geneeval"
version = "0.1.0-alpha.0"
description = "A Python library for benchmarking gene function prediction."
license = "Apache-2.0"
authors = ["johngiorgi <johnmgiorgi@gmail.com>", "duncanforster <duncan.forster@mail.utoronto.ca>"]
readme = "README.md"
repository = "https://github.com/BaderLab/GeneEval"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
overrides = "^3.1.0"
pandas = "^1.1.0"
typer = {extras = ["all"], version = "^0.3.1"}
orjson = "^3.3.0"
torch = { version = "^1.6.0", optional = true }
skorch = { version = "^0.9.0", optional = true }
scikit-learn = "^0.23.2"

[tool.poetry.extras]
features = ["torch", "skorch"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
hypothesis = "^5.37.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.0"
coverage = "^5.2.1"
codecov = "^2.1.8"

[tool.poetry.scripts]
geneeval = "geneeval.main:app"

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


