[metadata]
name = geneeval
author = BaderLab
summary = A Python library for evaluating gene embeddings
description-file = README.md
home-page = https://github.com/BaderLab/GeneEval
project_urls =
    Source Code = https://github.com/BaderLab/GeneEval
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed
keywords =
    gene embeddings

[files]
packages =
    geneeval

[entry_points]
console_scripts =
    geneeval = geneeval.main:run

[extras]
dev =
    black
    flake8
    hypothesis
    pytest
    pytest-cov
    coverage
    codecov